css/style.css
/* COMMON RULES */

ul {
    list-style: none;
    display: flex;
    
}

.ms_button {
    padding: 0.3rem 1rem;
    border-radius: 20px;
    background-color: black;
    color: white;
    max-width: 200px;
    text-decoration: none;
}

a:hover {
    color: black;
    text-decoration: none;
}

.ms_big-btn {
    padding: 0.5rem 1.2rem;
}

.ms_red_btn {
    background-color: #cd3d0f;
}

.ms_blue_btn {
    background-color: #2d64e6;
    color: white;
}

.ms_blue_btn:hover {
    background-color: #5680e4;
    color: white;
}

.container {
    max-width: 95%;
}

.ms_text-blue {
    color: #0071ce;
}

/* HEADER */

header {
    position: fixed;
    top: 0;
    left: 0%;
    z-index: 999;
    height: 80px;
    background-color: white;
    width: 100%;
}

#header_top {
    background-color: black;
    height: 30px;
}

#header_top img{
    width: 50px;
}

#header_bot img {
    height: 100%;
}

#header_bot {
    height: 20px;
}

header ul {
    align-items: center;
}

#nav_list-icon {
    border: 1px solid lightgrey;
    padding: 0.2rem 0.8rem;
    border-radius: 5px;
    color: lightgrey;
}

#nav_btn {
    color: white;
}

.nav-link {
    color: black;
    padding: 0 0.5rem ;
}

.nav-link:hover {
    color: black;
}

.font-size-12px {
    font-size: 12px;
}

.nav-item i {
    padding-left: 0.3rem;
}



/* JUMBO */

#jumbo {
    margin-top: 80px;
    background-image: url(../img/jumbo-bg.png);
    background-size: cover;
    background-position: center;
}

#returnal-logo {
    width: 200px;
}

#buy_now {
    width: 120px;
}


/* LISTING */

.img_wrap {
    border: 3px solid #0060c8;
    width: 100%;
}

.img_wrap:hover {
    transform: translate(0, -1rem);
}

.img_wrap.invisible_border {
    border: 3px solid white;
}


/* HARDWARE */

#hardware h6 {
    margin-bottom: 0px;
}

.ms_opaque-wrap {
    opacity: 0.6;
}

.ms_blue-border-bot {
    border-bottom: 2px solid #0060c8;
}

.col-4.col-md.ms_opaque-wrap:hover {
    opacity: 1;
    cursor: pointer;
}


/* PAGE BANNER */

#hero-banner {
    background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
    background-size: cover;
    background-position: center;
}


/* NEW RELEASES */

#new-releases {
    color: white;
    background-color: #1f1f1f;
}





/* MEDIA QUERIES */

@media screen and (min-width:768px) {

    #returnal-logo {
        width: 300px;
    }
}

@media screen and (min-width:1200px) {

    .debug #jumbo {
        height: 80vh;
    }

    #returnal-logo {
        width: 400px;
    }

    #hero-card img {
        width: 300px;
    }

}










/* debug rules */

.debug #jumbo {
    min-height: 500px;
}

